--- a/UI/templates/user_premade_routine.html
+++ b/UI/templates/user_premade_routine.html
@@ -9,9 +9,33 @@
     <div id="page_flavor_text">
         READY-MADE ROUTINE
     </div>
-    <a class="btn btn-light" id="routine_start" href="/user_id={{id}}/ready">START</a>
-    <div id="interactible_container">
-        <div class="routine_widget">
+    <!-- A way for javascript to access the id field. -->
+    <div id="data" data-id="{{id}}" data-routine="{{ routine_data }}" data-routine-desc="{{ routine_desc }}"></div>
+
+    <!-- Remove the direct href call and let javascript handle it. -->
+    <!-- <a class="btn btn-light" id="routine_start" href="/user_id={{id}}/ready">START</a> -->
+    <button class="btn btn-light" id="routine_start">START</button>
+
+    <div class="routine_container">
+        {% for i in range(1, 3) %}
+        <div class="routine_option" id="option-{{i}}">
+            <button type="button" class="btn btn-light" id="routine_option_{{i}}"></button>
+            <p class="routine_text">Routine {{i}}</p>
+            <div class="routine_img_cabaret">
+                {% for j in range(1, 4) %}
+                <div class="routine_img_container" id="-{{j}}">
+                    <div class="routine_img"></div>
+                    <div class="routine_reps"></div>
+                    <div class="routine_sets"></div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="routine_desc_container">
+                <div class="routine_label">Description:</div>
+                <div class="routine_content">Content</div>
+            </div>
         </div>
+        {% endfor %}
     </div>
+    <script type="text/javascript" src="/static/javascript/user_premade_routine.js"></script>
 {% endblock %}
