--- a/Admin-UI-Kivy/admin.kv
+++ b/Admin-UI-Kivy/admin.kv
@@ -21,5 +21,5 @@
     font_size: '16sp'
     color: 1, 1, 1, 1  # White color
     background_normal: ''
-    background_color: 0.19, 0, 0.39, 1  # RGB for #310063
+    background_color: 0, 0, 1, 1  # Blue button
     font_name: 'fonts/gabarito.ttf'
